--- a/shark/build
+++ b/shark/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-shark_dirs=$(ls -d ../shark*)
+shark_dirs=$(ls -d shark*)
 dir_list=("$shark_dirs")
 
 # NOTE: the order matters but this is the right one
@@ -9,5 +9,5 @@ for i in ${dir_list[@]}; do
 	cd $i;
 	cat build;
 	. build;
-	cd ../build;
+	cd ..;
 done
