--- a/mesos/mesos-master/Dockerfile
+++ b/mesos/mesos-master/Dockerfile
@@ -3,7 +3,7 @@ FROM mesos-base:0.13.0
 MAINTAINER AMPLab amplab@berkeley.edu
 
 # Setup a volume for data
-VOLUME ["/data"]
+#VOLUME ["/data"]
 
 ADD files /root/mesos_master_files
 
