--- a/mesos/mesos-master/Dockerfile
+++ b/mesos/mesos-master/Dockerfile
@@ -1,6 +1,6 @@
 # Mesos
-FROM mesos-base:0.13.0
-MAINTAINER AMPLab amplab@berkeley.edu
+FROM amplab/mesos-base:0.13.0
+MAINTAINER amplab amp-docker@eecs.berkeley.edu
 
 # Setup a volume for data
 #VOLUME ["/data"]
