--- a/spark-0.8/spark-base/Dockerfile
+++ b/spark-0.8/spark-base/Dockerfile
@@ -1,9 +1,9 @@
 # Spark 0.8.0
 # Version 0.8.0
 #
-FROM apache-hadoop-hdfs-precise:1.2.1
+FROM amplab/apache-hadoop-hdfs-precise:1.2.1
 
-MAINTAINER AMPLab amplab@berkeley.edu
+MAINTAINER amplab amp-docker@eecs.berkeley.edu
 
 ENV SCALA_VERSION 2.9.3
 ENV SPARK_VERSION 0.8.0
