--- a/spark/spark-master/Dockerfile
+++ b/spark/spark-master/Dockerfile
@@ -1,6 +1,7 @@
-# Spark
-FROM spark-base:0.7.3
-MAINTAINER AMPLab amplab@berkeley.edu
+# Spark 0.7.3
+# Version 0.7.3
+FROM amplab/spark-base:0.7.3
+MAINTAINER amplab amp-docker@eecs.berkeley.edu
 
 # Expose TCP ports 7077 8080
 EXPOSE 7077 8080
