--- a/shark/shark-base/Dockerfile
+++ b/shark/shark-base/Dockerfile
@@ -2,7 +2,7 @@
 # Version 0.7.0
 #
 # Use spark-base as base
-FROM amplab/spark-base:0.7.3
+FROM spark-base:0.7.3
 MAINTAINER amplab amp-docker@eecs.berkeley.edu
 
 # note: SPARK_VERSION should be inherited from spark-base
@@ -17,11 +17,5 @@ RUN (cd / && gunzip < shark-${SHARK_VERSION}-hadoop1-bin.tgz)|(cd /opt && tar -x
 RUN rm /shark-${SHARK_VERSION}-hadoop1-bin.tgz
 
 # Add Shark config files and configure script
-# NOTE: we rather do this as a single ADD statement
-# since we are running into
-# 	Error build: Unable to mount using aufs
-# 	Unable to mount using aufs
-# issue. For more information see
-#	https://github.com/dotcloud/docker/issues/1171
 ADD files /root/shark_files
 
