--- a/shark/shark-worker/Dockerfile
+++ b/shark/shark-worker/Dockerfile
@@ -1,10 +1,6 @@
 # Shark worker
-FROM amplab/shark-base:0.7.0
+FROM shark-base:0.7.0
 MAINTAINER amplab amp-docker@eecs.berkeley.edu
-
-# Instead of using a random port, bind the worker to a specific port
-# Note: Here we assume the virtual bridge is used!
-ENV SPARK_WORKER_PORT 8888
 
 # Add run script
 ADD files /root/shark_worker_files
