--- a/spark/spark-worker/Dockerfile
+++ b/spark/spark-worker/Dockerfile
@@ -1,11 +1,7 @@
 # Spark 0.7.3
 # Version 0.7.3
-FROM amplab/spark-base:0.7.3
+FROM spark-base:0.7.3
 MAINTAINER amplab amp-docker@eecs.berkeley.edu
-
-# Instead of using a random port, bind the worker to a specific port
-ENV SPARK_WORKER_PORT 8888
-EXPOSE 8888
 
 ADD files /root/spark_worker_files
 
