--- a/spark/spark-base/Dockerfile
+++ b/spark/spark-base/Dockerfile
@@ -14,7 +14,7 @@ ENV PATH $SPARK_HOME:$SCALA_HOME/bin:$PATH
 # Install Scala
 ADD http://www.scala-lang.org/files/archive/scala-$SCALA_VERSION.tgz /
 RUN (cd / && gunzip < scala-$SCALA_VERSION.tgz)|(cd /opt && tar -xvf -)
-RUN rm /scala-$SCALA_VERSION.tgz
+RUN rm /scala-$SCALA_VERSION.tgz && chown -R hdfs.hdfs /opt/scala-$SCALA_VERSION
 
 # Install Spark 
 ADD http://spark-project.org/download/spark-$SPARK_VERSION-prebuilt-hadoop1.tgz /
@@ -23,3 +23,7 @@ RUN rm /spark-$SPARK_VERSION-prebuilt-hadoop1.tgz
 
 # Add Spark config files and configure script
 ADD files /root/spark_files
+
+#RUN cp /root/spark_files/spark-0.7.3_precomp_hadoop1.tar.gz /
+#RUN (cd / && gunzip < spark-0.7.3_precomp_hadoop1.tar.gz)|(cd /opt && tar -xvf -)
+#RUN rm /spark-0.7.3_precomp_hadoop1.tar.gz
