--- a/spark/spark-shell/Dockerfile
+++ b/spark/spark-shell/Dockerfile
@@ -3,6 +3,8 @@
 FROM spark-base:0.7.3
 MAINTAINER amplab amp-docker@eecs.berkeley.edu
 
+VOLUME [ "/etc/dnsmasq.d" ]
+
 ADD files /root/spark_shell_files
 
 # Add the entrypoint script for the master
