--- a/spark-0.8/spark-shell/Dockerfile
+++ b/spark-0.8/spark-shell/Dockerfile
@@ -1,5 +1,5 @@
 # Spark
-FROM amplab/spark-base:0.8.0
+FROM spark-base:0.8.0
 MAINTAINER amplab amp-docker@eecs.berkeley.edu
 
 # Instead of using a random port, bind the worker to a specific port
