Allowing dnsmasq to be run as root.

--- a/dnsmasq-precise/Dockerfile
+++ b/dnsmasq-precise/Dockerfile
@@ -6,7 +6,8 @@ VOLUME [ "/etc/dnsmasq.d" ]
 
 RUN apt-get install -y dnsmasq-base
 
-RUN echo "listen-address=__LOCAL_IP__" > /etc/dnsmasq.conf
+RUN echo "user=root" > /etc/dnsmasq.conf
+RUN echo "listen-address=__LOCAL_IP__" >> /etc/dnsmasq.conf
 RUN echo "resolv-file=/etc/resolv.dnsmasq.conf" >> /etc/dnsmasq.conf
 RUN echo "conf-dir=/etc/dnsmasq.d"  >> /etc/dnsmasq.conf
 RUN echo "domain=cluster.com"  >> /etc/dnsmasq.conf
