Fixing Spark 0.8.0 download link and reducing number of images in repo

--- a/spark-0.8.0/spark-base/Dockerfile
+++ b/spark-0.8.0/spark-base/Dockerfile
@@ -17,7 +17,7 @@ RUN (cd / && gunzip < scala-$SCALA_VERSION.tgz)|(cd /opt && tar -xvf -)
 RUN rm /scala-$SCALA_VERSION.tgz
 
 # Install Spark 
-ADD http://spark-project.org/download/spark-$SPARK_VERSION-incubating-bin-hadoop1.tgz /
+ADD http://d3kbcqa49mib13.cloudfront.net/spark-$SPARK_VERSION-incubating-bin-hadoop1.tgz /
 RUN (cd / && gunzip < spark-$SPARK_VERSION-incubating-bin-hadoop1.tgz)|(cd /opt && tar -xvf -)
 RUN (ln -s /opt/spark-$SPARK_VERSION-incubating-bin-hadoop1 /opt/spark-$SPARK_VERSION && rm /spark-$SPARK_VERSION-incubating-bin-hadoop1.tgz)
 
