--- a/apache-hadoop-hdfs-precise/Dockerfile
+++ b/apache-hadoop-hdfs-precise/Dockerfile
@@ -8,6 +8,7 @@ VOLUME ["/data"]
 
 # Set correct source list
 RUN echo "deb http://archive.ubuntu.com/ubuntu precise main universe" > /etc/apt/sources.list
+RUN echo "deb http://archive.ubuntu.com/ubuntu precise-updates main universe" >> /etc/apt/sources.list
 
 # install a few other useful packages plus Open Jdk 7
 RUN apt-get update && apt-get upgrade -y && apt-get install -y less openjdk-7-jre-headless net-tools vim-tiny sudo openssh-server iputils-ping
